Fix flicker at hot-reload
The page was blinking bright green. Probably due to body color? This
makes the flash much more tolerable.

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -50,6 +50,7 @@ button {
   z-index: 1;
   border-style: solid;
   border-width: 128px;
+  border-color: transparent;
   border-image: url('../images/border-image.png') 50% repeat;
   box-sizing: border-box;
   pointer-events: none;
